syntax = "proto3";

package tycho.evm.v1;

message Block {
  bytes hash = 1;
  bytes parent_hash = 2;
  uint64 number = 3;
  uint64 ts = 4;
}

message Transaction {
  bytes hash = 1;
  bytes from = 2;
  bytes to = 3;
  uint64 index = 4;
}

message ContractSlot {
  bytes slot = 2;
  bytes value = 3;
}

enum ChangeType {
  CHANGE_TYPE_UNSPECIFIED = 0;
  CHANGE_TYPE_UPDATE = 1;
  CHANGE_TYPE_CREATION = 2;
  CHANGE_TYPE_DELETION = 3;
}

message ContractChange {
  bytes address = 1;
  // empty bytes indicates no change
  bytes balance = 2;
  // empty bytes indicates no change
  bytes code = 3;
  // empty sequence indicates no change
  repeated ContractSlot slots = 4;
  // Whether this is an update, creation or deletion
  ChangeType change = 5;
}

message ProtocolComponent {
  repeated bytes tokens = 1;
  repeated Contract contracts = 2;
}

message Contract {
  repeated bytes contract = 1;
}

message TVLUpdate {
  bytes token = 2;
  bytes balance = 3;
}

message TransactionChanges {
  Transaction tx = 1;
  repeated ContractChange contract_changes = 2;
  repeated ProtocolComponent components = 3;
  repeated TVLUpdate tvl = 4;
}

message BlockContractChanges {
  Block block = 1;
  repeated TransactionChanges changes = 2;
}
